--- a/onbuild/Dockerfile
+++ b/onbuild/Dockerfile
@@ -1,4 +1,4 @@
-FROM xhttpdev/docker-symfony:latest
+FROM xhttpdev/docker-symfony:5.6
 
 ONBUILD ADD . /var/www/html
 ONBUILD RUN chown -R www-data:www-data .
